# vid.stab

./: .gitignore  CMakeLists.txt  Changelog  Install  LICENSE  README  README.md  Todo  mktags.sh  vidstab.prj
.github/workflows/: c-cpp.yml
CMakeModules/: FindGLPK.cmake  FindSSE.cmake  TestSSE3.c  TestSSE41.c  TestSSSE3.c  WritePgkConfig.cmake  create_pkgconfig_file.cmake
benchmarks/: test.sh  transform.sh
ffmpeg-vidstab/snap/: snapcraft.yaml
libavfilter/: README  git-workflow.txt  optstr.c  optstr.h  vf_stabilize.c  vf_transform.c  vf_vidstabdetect.c  vf_vidstabtransform.c
profiling/: profiler.sh
src/: CMakeLists.txt  Changelog  boxblur.c  boxblur.h  campathoptimization.c  campathoptimization.h  compat.h  deshakedefines.h  dslist.c  dslist.h  dsvector.c  dsvector.h  filter_stabilize.c  filter_transform.c  frameinfo.c  frameinfo.h  l1campathoptimization.c  l1campathoptimization.h  libdeshake.c  libdeshake.h  libvidstab.c  libvidstab.h  localmotion2transform.c  localmotion2transform.h  motiondetect.c  motiondetect.h  motiondetect_internal.h  motiondetect_opt.c  motiondetect_opt.h  serialize.c  serialize.h  sse2neon.h  transform.c  transform.h  transform_internal.h  transformfixedpoint.c  transformfixedpoint.h  transformfloat.c  transformfloat.h  transformtype.c  (+7 more)
src/orc/: Makefile  motiondetectorc.c  motiondetectorc.h  motiondetectorc.orc  transformorc.orc
tests/: CMakeLists.txt  generate.c  test_boxblur.c  test_campathopt.c  test_compareImg.c  test_compareimg.c  test_contrast.c  test_gradientoptimizer.c  test_localmotion2transform.c  test_motiondetect.c  test_omp.c  test_store_restore.c  test_transform.c  testframework.c  testframework.h  tests.c  testutils.c  testutils.h
tests/orc_bug/: CMakeLists.txt  FindOrc.cmake  orc_bug.c  orc_bug_orc.c  orc_bug_orc.h  orc_bug_orc.orc
transcode/: CMakeLists.txt  filter_deshake.c  filter_stabilize.c  filter_transform.c  pix_formats.h  transcode_specifics.h
transcode/cmake/: .gitignore  install.sh
